Fixed radio button alignment

--- a/contact-form-main/style.css
+++ b/contact-form-main/style.css
@@ -136,6 +136,8 @@ input[type="text"], .radio-btn-label, textarea {
 }
 
 .radio-btn-label {
+    width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     gap: var(--radio-button-space);
@@ -166,17 +168,11 @@ input[type="radio"]:checked::before { /* Add checked image*/
     background-image: url("./assets/images/icon-radio-selected.svg");
     background-position: center;
     background-size: contain;
-
 }
+
 .radio-btn-label:has(input[type="radio"]:checked) {
     background-color: var(--transparent-green600);
     border: 2px solid var(--green600);
-}
-
-.radio-btn-label{
-    display: block;
-    width: 100%;
-    height: 100%;
 }
 
 label[for="consent"] {
